--- a/angularapp/src/app/component/user/user.component.css
+++ b/angularapp/src/app/component/user/user.component.css
@@ -56,9 +56,9 @@ a:hover {
 }
 
 .dropdown-content img {
-        margin-top: 100px;
+        
         display: block;
-        margin: 0 auto;
+        margin: 100px auto;
     border-radius: 50%;
 }
 
