--- a/angularapp/src/app/component/admin/admin.component.html
+++ b/angularapp/src/app/component/admin/admin.component.html
@@ -2,7 +2,7 @@
 <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light p-3 " style="background-color: darkblue;position: sticky; top: 0; z-index: 100;">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/user/homepage">Cool King</a>
+      <a class="navbar-brand" routerLink="/user/homepage">Cooling King</a>
        <button class="navbar-toggler" type="button" style="background-color: azure;color: darkblue;"data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
