--- a/angularapp/src/app/component/user/user.component.html
+++ b/angularapp/src/app/component/user/user.component.html
@@ -1,7 +1,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light p-3 " style="background-color: darkblue;">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/user/homepage">Cool King</a>
+      <a class="navbar-brand" routerLink="/user/homepage">Cooling King</a>
        <button class="navbar-toggler" type="button" style="background-color: azure;color: darkblue;"data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
