--- a/angularapp/src/app/component/user/dashboard/dashboard.component.html
+++ b/angularapp/src/app/component/user/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             </p>
             <p><b>Timing :</b> 00:00-23:59</p>
             <p><b>Reviews</b></p>
-            <p><app-carousel></app-carousel></p> 
+            <!-- <p><app-carousel></app-carousel></p>  -->
           </div>
     <!-- FORM TO BOOK THE APPOINTMENT -->
           <div class="card">
